[project]
name = "lh"
version = "0.1.0"
description = ""
authors = [
    {name = "dingjingmaster",email = "dingjing@live.cn"}
]
requires-python = ">=3.12,<4"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
