[project]
name = "lh"
version = "0.1.0"
description = ""
authors = [
    {name = "dingjingmaster",email = "dingjing@live.cn"}
]


[tool.poetry]
name = "lh"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4"
numpy = "==2.0"
metatrader5 = "^5.0.5640"
requests = "2.25"
matplotlib = "^3.10.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
